# mlx-examples

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ZH.md  lora_module.py  pyrightconfig.json  test.py
.circleci/: config.yml
bert/: README.md  convert.py  hf_model.py  model.py  requirements.txt  test.py
cifar/: README.md  dataset.py  main.py  requirements.txt  resnet.py
clip/: .gitignore  README.md  clip.py  config.py  convert.py  download.py  eval.py  example.ipynb  example.py  hf_preproc.py  image_config.py  image_constants.py  image_processor.py  image_transforms.py  image_utils.py  linear_probe.py  model.py  model_io.py  requirements.txt  test.py  tokenizer.py
clustering/: README.md  fcm.py  main.py  requirements.txt
cvae/: README.md  dataset.py  generate.py  loss.py  main.py  model.py  reconstruct.py  requirements.txt  train.py  utils.py  vae.py
embeddings/: README.md  embeddings.py  mlx_embeddings.py  requirements.txt  test_mteb.py
encodec/: README.md  convert.py  encodec.py  example.py  hf_test.py  requirements.txt  test.py  utils.py
esm/: README.md  convert.py  main.py  requirements.txt  test.py
flow/: README.md  bijectors.py  distributions.py  flows.py  main.py  requirements.txt
flux/: README.md  dreambooth.py  generate_interactive.py  requirements.txt  setup.py  txt2image.py
gan/: main.py  playground.ipynb
gcn/: .gitignore  README.md  datasets.py  gcn.py  main.py  requirements.txt
guides/: profile_fusion.py  profiling_with_instruments.md
kan/: KAN-torch.py  KAN.py  README.md  fastKAN.py  main.py  mnist.py  requirements.txt  utils.py
llama/: README.md  README.txt  convert.py  evo_lama.sh  evo_llama.py  llama.py  meta_evo_lama.sh  meta_view_stats.sh  view_stats.sh
llava/: .gitignore  Local LLava.ipynb  README.md  clip.py  config.py  convert.py  download.py  generate.py  image_processor.py  language.py  llama.py  llava.py  processing_llava.py  requirements.txt  test.py  utils.py  vision.py
llms/: CONTRIBUTING.md  MANIFEST.in  README.md  a.py  b.py  c.py  d.py  issue.txt  setup.py  test_memory_estimation.py
llms/export/: CMakeLists.txt  README.md  export.py  main.cpp  mlxlm.cpp  mlxlm.h  test.cpp  tokenizer.cpp  tokenizer.h  unicode.cpp  unicode.h  unicode_data.cpp
lookup_decoding/: README.md  decoder.py  mistral.py  test.py
lora/: .gitignore  README.md  convert.py  fuse.py  hf_llm_supervised.py  llama.py  lora.py  mistral_supervised.py  models.py  requirements.txt  supervised_lora.py  utils.py  wikisql.py
m2m_100/: convert.py  flores200_codes.py  m2m_100.py  m2m_100_model.py  modelling_m2m.py  requirements.txt  test.py  test_m2m_100.py  utils.py
mingpt/: mingptmlx.py
mistral/: README.md  convert.py  (+2 more)
video/Wan2.2/: .gitignore  Makefile  README.md  generate.py  pyproject.toml  requirements.txt
video/Wan2.2/wan/: __init__.py  t5_model_io.py  t5_torch_to_sf.py  text2video.py  vae_model_io.py  wan_model_io.py
video/Wan2.2/wan/configs/: __init__.py  shared_config.py  wan_i2v_A14B.py  wan_t2v_A14B.py  wan_ti2v_5B.py
video/Wan2.2/wan/modules/: __init__.py  model.py  t5.py  vae2_1.py
video/Wan2.2/wan/utils/: __init__.py  qwen_vl_utils.py  system_prompt.py  utils.py
(+528 files in other folders)
